recursion.lessons.recursion.koch.Koch.scala.error
Koch:22: error: ')' expected but ';' found.
	avance(length / (levels + 2);
                                    ^